--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         </activity>
         <activity
             android:name=".Tables"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="com.giao.ordersystem.Tables" />
                 <category android:name="android.intent.category.DEFAULT" />
