Working with AddDish
Working with AddDish
Find the best way to return to previous activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity
             android:name=".Menu"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="com.giao.ordersystem.Menu" />
